--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -1,6 +1,6 @@
 #InfoText {
     font-size: 36px;
-    color: rgb(0, 0, 255);
+    color: #0000ff;
 }
 #GreenText {
     font-size: 24px;
@@ -8,7 +8,7 @@
     background-color: rgb(144, 238, 144);
 }
 .Default {
-    background-color: #ffb6c1;
+    background-color: rgb(255, 184, 194);
     font-family: Verdana, "Dejavu Sans", sans-serif;
 }
 .BigText {
